# haskell-json-query

./: LICENSE  README.md  company.json  haskell-json-query.cabal  hie.yaml  nfl.json  project-cis5520.cabal  school.json  test.hjql  test.json  writeExample.json
app/: Main.hs
jsonExamples/: company.json  company_original.json  companydel.hjql  companyrd.hjql  companywr.hjql  nfldel.hjql  nflrd1.hjql  nflrd2.hjql  nflwr.hjql  school.json  schooldel.hjql  schoolrd1.hjql  schoolrd2.hjql  schoolrd3.hjql  schoolwr.hjql
src/: ConvertJSON.hs  HJQL.hs  HJQLParser.hs  HJQLTest.hs  JSONObject.hs  JSONParser.hs  Parser.hs
test/: HJQLParserTest.hs  HJQLTest.hs  JSONParserTest.hs  ParserTest.hs  QueryTest.hs  Spec.hs
