cabal-version:  2.2
name:           haskell-json-query
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/ezhao02/haskell-json-query#readme>
homepage:       https://github.com/ezhao02/haskell-json-query#readme
bug-reports:    https://github.com/ezhao02/haskell-json-query/issues
author:         Eric Zhao, Henghak Kun
maintainer:     example@example.com
copyright:      2023 Eric Zhao, Henghak Kun
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/haskell-json-query

common common-stanza
  ghc-options:         -Wno-type-defaults -fwarn-incomplete-patterns
  build-depends:
      base >=4.15
    , HUnit 
    , QuickCheck
    , containers
    , filepath
    , pretty
    , network
    , directory
    , random
    , mtl
  default-language:
    GHC2021
  default-extensions:


library
  import:
      common-stanza
  exposed-modules:
      -- if you add modules to your project, list them here
      -- so that they will be available to the executable and test suite
      HJQL
      HJQLParser
      Parser
      JSONParser
      JSONObject
      ConvertJSON
  hs-source-dirs:
      src

executable haskell-json-query-exe
  import:
      common-stanza
  main-is: 
      Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      haskell-json-query


test-suite haskell-json-query-test
  import:
      common-stanza
  type: 
      exitcode-stdio-1.0
  main-is: 
      Spec.hs
  hs-source-dirs:
      test
  other-modules:
      HJQLTest
      HJQLParserTest
      JSONParserTest
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      haskell-json-query

